--- a/app/Style/MainStyle.css
+++ b/app/Style/MainStyle.css
@@ -1,9 +1,25 @@
 .home-background {
+    background-position: bottom;
+    object-fit: none; 
     height: 100vh;
-    position: relative;
+    background-position: center center;
   }
+
+
+  .black-bar{
+    background-color: black;
+    height: 1px;
+    position: absolute;
+    padding-top: 100vh;
+  }
+
+.home-main
+{
+  height: 100vh;
+}
+
   .home-title {
-    font-size: 4.5rem;
+    font-size: 100px;
     font-weight: 600;
     padding-left: 8vw;
     padding-top: 12vh;
@@ -11,7 +27,7 @@
   
   .home-description {
     line-height: 0%;
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: 200;
   }
   .home-button-div {
@@ -41,3 +57,71 @@
     color: white;
     box-shadow: inset;
   }  
+
+
+
+
+
+
+  @media screen and (max-width: 768px)
+  {
+    .home-background {
+      background-position: bottom;
+      object-fit: none; 
+      height: 100vh;
+      background-position: center center;
+    }
+  
+  
+    .black-bar{
+      background-color: black;
+      height: 1px;
+      position: absolute;
+      padding-top: 100vh;
+    }
+  
+  .home-main
+  {
+    height: 100vh;
+  }
+  
+    .home-title {
+      font-size: 7.5vh;
+      font-weight: 600;
+      padding-left: 8vw;
+      padding-top: 12vh;
+    }
+    
+    .home-description {
+      line-height: 0%;
+      font-size: 1.4rem;
+      font-weight: 200;
+    }
+    .home-button-div {
+      padding-left: 12vw;
+      position: absolute;
+    }
+    .home-button {
+      padding: 10px;
+      padding-right: 20px;
+      padding-left: 20px;
+      border: 1px solid;
+      background-color: #8856f5b2;
+      border-radius: 40px;
+      font-size: 30px;
+      color: white;
+      transition-duration: 0.2s;
+    }
+    .home-button:hover {
+      transition-duration: 0.2s;
+      padding: 10px;
+      padding-right: 20px;
+      padding-left: 20px;
+      border: 1px solid;
+      background-color: #8856f5;
+      border-radius: 40px;
+      font-size: 30px;
+      color: white;
+      box-shadow: inset;
+    }  
+  }
