--- a/app/main/styles/Navbar.css
+++ b/app/main/styles/Navbar.css
@@ -1,7 +1,7 @@
 .navbar-main
 {
     height: 8vh;
-    background-color: #080808;
+    background-color: #796bf8;
     border-bottom: 1px solid;
     width: 100%;
     color: #ffffff;
