--- a/app/main/styles/Signin.css
+++ b/app/main/styles/Signin.css
@@ -1,4 +1,4 @@
-.button-34 {
+.button-34, .main-signout-button  {
   background: #5E5DF0;
   border-radius: 999px;
   box-shadow: #5E5DF0 0 10px 20px -10px;
@@ -18,6 +18,7 @@
   width: fit-content;
   word-break: break-word;
   border: 0;
+  
 }
 
 /* mobile */
@@ -26,6 +27,7 @@
     padding: 10px 20px; 
     font-size: 14px; 
   }
+  
 }
 
 /* desktop */
@@ -34,4 +36,18 @@
     padding: 16px 30px; 
     font-size: 18px; 
   }
+}
+@media (max-width: 450px ){
+.credits-info{
+  display: none;
+  
+}}
+.fnav{
+  justify-content: flex-end ;
+  margin-right: 8%;
+  margin-top: 7px;
+}
+.dropdown-menu{
+  background-color: #493654!important;
+  color:rgb(111, 243, 183);
 }
