--- a/app/Style/Scroll.css
+++ b/app/Style/Scroll.css
@@ -1,21 +1,28 @@
 /* width */
 ::-webkit-scrollbar {
     width: 7px;
+    
+    position: absolute;
   }
   
   ::-webkit-scrollbar-track {
     display: none;
     width: 2px;
+    position: absolute;
   }
   
   /* Handle */
   ::-webkit-scrollbar-thumb {
     background: #7d6ffc;
     width: 2px;
+    
+    position: absolute;
   }
   
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
     background: #0344cf;
     width: 2px;
+    
+    position: absolute;
   }
