--- a/app/Style/Experts.css
+++ b/app/Style/Experts.css
@@ -2,8 +2,16 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: right;
+  justify-content: center;
 }
+
+.mission-main {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 
 .experts-right {
   height: 80vh;
@@ -17,7 +25,22 @@
   height: auto;
   position: relative;
   background-color: white;
-  width: 49vw;
+  width: 50vw;
+}
+
+.mission-left {
+  height: 80vh;
+  position: relative;
+  background-color: white;
+  width: 50vw;
+  overflow: hidden;
+}
+
+.mission-right {
+  height: auto;
+  position: relative;
+  background-color: white;
+  width: 50vw;
 }
 
 .experts-background {
