--- a/app/main/styles/Main.css
+++ b/app/main/styles/Main.css
@@ -141,3 +141,8 @@
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
   }
+
+  ::selection {
+    background: transparent;
+    border: 1px solid;
+  }
