--- a/app/main/styles/Main.css
+++ b/app/main/styles/Main.css
@@ -67,16 +67,16 @@
 }
 
 .uploader
-{
-    height: fit-content;
+{   height: fit-content;
     width: fit-content;
-    background-color: transparent;
+    background-color: rgb(244, 236, 236);
     align-items: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    margin-left: 0%;
 }
 
 .uploader-main
@@ -107,23 +107,42 @@
 
 .uploader-placeholder
 {
-    height: 200px;
-    width: 400px;
+    height: 17vw;
+    width: 25vw;
     color: #858585;
     justify-content: center;
     align-items: center;
     display: flex;
-    border-radius: 10px;
+    border-radius: 0;
     background-color: transparent;
-    border: 2px dashed #858585;
 }
-
+.im{
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 8%;
+    margin-left: 0;
+}
 .uploader-details
-{
-    color: #858585;
-    text-align: center;
+{   
+    height:auto;
+    width: auto;
+    padding: 5%;
+    padding-bottom: 0%;
+    color: #858585 !important;
+    justify-content: space-around;
+    align-items: center;
+    display: block;
+    border-radius: 0;
+    background-color: transparent;
+    background-color: rgb(244, 236, 236);
 }
-
+.dustbin{
+    justify-content: end;
+    align-items: flex-end !important;
+}
+.filename{
+    justify-content: center;
+}
 .spacing
 {
     padding-top: 10vh;
@@ -146,3 +165,71 @@
     background: transparent;
     border: 1px solid;
   }
+
+
+
+ .setter{
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-around;
+ }
+ .second{
+    min-width: 50%;
+    max-width: 50%;
+    display: table-column;
+    
+    
+ }
+ .tex{
+    font-size: xx-large;
+    font-weight: 800;
+ }
+
+ .btnupload{
+    color:#73797e !important;
+    font-weight: 700;
+    margin-top: 5%;
+  align-items: center;
+  appearance: none;
+  background-color: #d4d4f2;
+  border-radius: 4px;
+  border-width: 0;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #36395A;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono",monospace;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
+  font-size: 18px;
+}
+
+.btnupload:focus {
+  box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+}
+
+.btnupload:hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.btnupload:active {
+  box-shadow: #D6D6E7 0 3px 7px inset;
+  transform: translateY(2px);
+}
+ 
