--- a/app/main/styles/Main.css
+++ b/app/main/styles/Main.css
@@ -98,15 +98,43 @@
 
 .uploader-submit
 {
-    height: 50px;
-    width: 100px;
-    border-radius: 20px;
-    color: white;
-    background-color: rgba(2, 39, 252, 0.747);
+    color:#73797e !important;
+    font-weight: 700;
+    margin-top: 5%;
+  align-items: center;
+  appearance: none;
+  background-color: #d4d4f2;
+  border-radius: 4px;
+  border-width: 0;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #36395A;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono",monospace;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
+  font-size: 18px;
 }
+
 .uploader-submit:hover {
-    background-color: rgba(2, 39, 252, 1);
-  }
+    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  transform: translateY(-2px);
+ }
 
 .uploader-placeholder
 {
