--- a/app/main/styles/Login.css
+++ b/app/main/styles/Login.css
@@ -75,6 +75,20 @@
     color: #007BFF;
   }
   
+  .noaccount {
+    margin-top: 10px;
+    text-align: center;
+    font-size: 14px;
+    color: #151516;
+    transition: color 0.3s;
+  }
+  
+  .noaccount a {
+    text-decoration: none;
+    color: #007BFF;
+  }
+
+  
   .or-divider {
     display: flex;
     align-items: center;
