--- a/app/main/styles/Main.css
+++ b/app/main/styles/Main.css
@@ -3,8 +3,12 @@
     height: 100vh;
 }
 .home-button-main{
-    transition-duration: 0.2s;
+    transition-duration: 0s;
     color: #ffffff;
+    background-color: transparent;
+    font-size: 24px;
+    font-weight: 800;
+    max-width: 14% !important;
 }
 
 
@@ -26,7 +30,10 @@
     align-items: center;
     justify-content: center;
 }
-
+.profphoto{
+    background-color: transparent;
+    padding: 0;
+}
 .user-info {
     align-items: center;
     color: black;
@@ -35,11 +42,11 @@
 }
 
 .dropdown-menu {
-    height: 200px;
+    height: 200px ;
     width: auto;
     padding: 30px;
-    padding-top: 5px;
-    background-color: black;
+    padding-top: 5px ;
+    background-color: black ;
     border-radius: 20px;
     position: absolute;
     right: 40px;
@@ -48,10 +55,19 @@
     display: flex;
     flex-direction: column;
     font-size: medium;
-    text-align: center;
+    text-align: center !important;
 }
 
-
+.menu-item {
+    background-color: transparent;
+    align-items: center;
+    padding:0%;
+    transition: transform 0.2s, background-color 0.2s;
+}
+.menu-item:hover{
+    transform: scale(0.9); 
+    background-color: none !important;
+}
 
 .profile-left {
     width: 30vw;
