more css updates

--- a/app/main/styles/Login.css
+++ b/app/main/styles/Login.css
@@ -122,6 +122,16 @@
     font-size: 16px;
     transition: color 0.3s;
   }
+
+  .google-image{
+    transition: transform 0.2s, background-color 0.2s;
+  }
+
+  .google-image:hover{  
+      transform: scale(1.15); 
+      background-color: none !important;
+      cursor: pointer;
+  }
   
   /* Media Queries for Responsiveness */
   
