--- a/app/main/styles/Register.css
+++ b/app/main/styles/Register.css
@@ -37,7 +37,9 @@
   }
   
   input[type="email"],
-  input[type="password"] {
+  input[type="password"],
+  input[type="number"],
+  input[type="text"] {
     width: 100%;
     padding: 10px;
     font-size: 16px;
@@ -47,11 +49,13 @@
   }
   
   input[type="email"]:focus,
-  input[type="password"]:focus {
+  input[type="password"]:focus,
+  input[type="number"]:focus,
+  input[type="text"]:focus{
     border: 1px solid #007BFF;
   }
   
-  button {
+  .button-register {
     width: 100%;
     padding: 10px;
     background-color: #007BFF;
@@ -63,7 +67,7 @@
     transition: background-color 0.3s;
   }
   
-  button:hover {
+  .button-register:hover {
     background-color: #0056b3;
   }
   
