--- a/app/main/styles/Signin.css
+++ b/app/main/styles/Signin.css
@@ -47,6 +47,7 @@
   margin-top: 7px;
 }
 .dropdown-menu{
+  min-width: 17% !important;
   background-color: #493654!important;
   color:rgb(111, 243, 183);
   height: auto;
@@ -64,6 +65,7 @@
 
 .main-signout-button{
   background: #5E5DF0;
+  min-width: auto;
   border-radius: 999px;
   box-shadow: #5E5DF0 0 10px 20px -10px;
   box-sizing: border-box;
@@ -80,8 +82,8 @@
   -webkit-user-select: none;
   touch-action: manipulation;
   width: fit-content;
-  margin-left:24%;
-
+  margin-left:12%;
+  
   word-break: break-word;
   border: 0;
   }
